--- a/css/style.css
+++ b/css/style.css
@@ -973,3 +973,16 @@ pre .deletion {
     padding: 2.5rem 0 !important;
   }
 }
+img[alt$=">"] {
+  float: right;
+}
+img[alt$="<"] {
+  float: left;
+}
+img[alt$="<>"] {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  float: none !important;
+}
